--- a/CS M117/CS M117/Base.lproj/Main.storyboard
+++ b/CS M117/CS M117/Base.lproj/Main.storyboard
@@ -27,7 +27,6 @@
                                 </state>
                                 <connections>
                                     <action selector="action:" destination="BYZ-38-t0r" eventType="touchUpInside" id="iIn-o4-jXX"/>
-                                    <segue destination="Su5-au-cb9" kind="modal" identifier="segue" id="mzw-yU-jXf"/>
                                 </connections>
                             </button>
                             <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="noe-Ov-o99">
@@ -63,6 +62,7 @@
                         <outlet property="passwordText" destination="fC2-6e-NWz" id="Eis-yJ-xaX"/>
                         <outlet property="signUpButton" destination="ENy-f8-N8a" id="u2a-7q-h9D"/>
                         <segue destination="sFm-n0-Dtd" kind="show" identifier="signup" id="h1i-0B-ICV"/>
+                        <segue destination="Su5-au-cb9" kind="show" identifier="signedIn" id="AIi-hz-MbI"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -78,7 +78,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="aKi-h8-ttO">
-                                <rect key="frame" x="0.0" y="67" width="375" height="600"/>
+                                <rect key="frame" x="0.0" y="119" width="375" height="548"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
@@ -124,6 +124,14 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MaC-vN-jp7">
+                                <rect key="frame" x="0.0" y="81" width="91" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Sign Out"/>
+                                <connections>
+                                    <action selector="signOut:" destination="aHU-Ma-732" eventType="touchUpInside" id="yHY-wv-bZi"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="rxT-fi-n5b"/>
@@ -137,6 +145,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="tableView" destination="aKi-h8-ttO" id="tXd-ja-q1g"/>
+                        <segue destination="BYZ-38-t0r" kind="show" identifier="segue2" id="aEN-ar-A5y"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hpA-w6-y5t" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -319,4 +328,7 @@
     <resources>
         <image name="checkBoxOUTLINE " width="22" height="22"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="aEN-ar-A5y"/>
+    </inferredMetricsTieBreakers>
 </document>
