--- a/CS M117/CS M117/Base.lproj/Main.storyboard
+++ b/CS M117/CS M117/Base.lproj/Main.storyboard
@@ -62,7 +62,7 @@
                         <outlet property="passwordText" destination="fC2-6e-NWz" id="Eis-yJ-xaX"/>
                         <outlet property="signUpButton" destination="ENy-f8-N8a" id="u2a-7q-h9D"/>
                         <segue destination="sFm-n0-Dtd" kind="show" identifier="signup" id="h1i-0B-ICV"/>
-                        <segue destination="Su5-au-cb9" kind="show" identifier="signedIn" id="AIi-hz-MbI"/>
+                        <segue destination="aHU-Ma-732" kind="show" identifier="signedIn" id="1Sb-aR-hJn"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -78,7 +78,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="aKi-h8-ttO">
-                                <rect key="frame" x="0.0" y="119" width="375" height="548"/>
+                                <rect key="frame" x="0.0" y="58" width="375" height="609"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
@@ -124,9 +124,19 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MaC-vN-jp7">
-                                <rect key="frame" x="0.0" y="81" width="91" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QfB-NY-yZ0">
+                                <rect key="frame" x="321" y="12" width="54" height="56"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="31"/>
+                                <state key="normal" title="+"/>
+                                <connections>
+                                    <action selector="plus:" destination="aHU-Ma-732" eventType="touchUpInside" id="phu-V7-TqA"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MaC-vN-jp7">
+                                <rect key="frame" x="0.0" y="20" width="91" height="39"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <state key="normal" title="Sign Out"/>
                                 <connections>
                                     <action selector="signOut:" destination="aHU-Ma-732" eventType="touchUpInside" id="yHY-wv-bZi"/>
@@ -139,7 +149,7 @@
                     <navigationItem key="navigationItem" id="3mG-Rk-xUE">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="5No-vo-EUM">
                             <connections>
-                                <segue destination="sMx-4p-Jc7" kind="show" id="yES-md-UcW"/>
+                                <segue destination="sMx-4p-Jc7" kind="show" identifier="addTask" id="yES-md-UcW"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -212,6 +222,7 @@
                         <outlet property="deadlineOutlet" destination="Bvl-WT-JTp" id="wkI-Jr-gci"/>
                         <outlet property="taskNameOutlet" destination="RvN-Pe-MN7" id="9a3-X9-vbd"/>
                         <outlet property="taskPointsOutlet" destination="ci9-qs-7Uq" id="55Y-tr-mFf"/>
+                        <segue destination="aHU-Ma-732" kind="show" identifier="addedTask" id="fSj-zE-vIB"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="w3T-d7-T9y" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -306,29 +317,12 @@
             </objects>
             <point key="canvasLocation" x="784.79999999999995" y="31.934032983508249"/>
         </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="qsX-cf-0yC">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Su5-au-cb9" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="5L1-pm-N8Z">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="aHU-Ma-732" kind="relationship" relationship="rootViewController" id="mOz-Md-REZ"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="pLt-Vn-hKi" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="813.60000000000002" y="883.80809595202402"/>
-        </scene>
     </scenes>
     <resources>
         <image name="checkBoxOUTLINE " width="22" height="22"/>
     </resources>
     <inferredMetricsTieBreakers>
+        <segue reference="fSj-zE-vIB"/>
         <segue reference="aEN-ar-A5y"/>
     </inferredMetricsTieBreakers>
 </document>
